[Auth Flow] Created the profile registration flow

--- a/Documents/e-kayseri/src/app/homepage/dashboard/dashboard.component.html
+++ b/Documents/e-kayseri/src/app/homepage/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <Section>
     <p class="header">Dashboard</p>
-    <div class="container">
+    <div class="container-box">
         <div class="upcoming-events">
             <p class="subheader">Upcoming Events</p>
             <div class="cards">
