--- a/Documents/e-kayseri/src/app/homepage/dashboard/dashboard.component.scss
+++ b/Documents/e-kayseri/src/app/homepage/dashboard/dashboard.component.scss
@@ -1,6 +1,6 @@
 @import '../../../library';
 
-.container {
+.container-box {
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 5fr 5fr;
