--- a/Documents/e-kayseri/src/app/auth-page/auth-page.component.html
+++ b/Documents/e-kayseri/src/app/auth-page/auth-page.component.html
@@ -6,18 +6,17 @@
   </div>
 
   <div class="side2">
-    <p class="greetings2">Welcome!</p>
-    <p class="greetings3">Log In</p>
+    <p class="greetings2">Selamat Datang </p>
+    <p class="greetings3">{{isNewUser ? 'Daftar' : 'Login'}}</p>
 
-    <div class="container">
-
+    <div class="welcome-container" id="login" *ngIf="!isNewUser">
       <div class="row">
-        <form action="login" class="col s12" method="POST">
+        <form action="login" class="col s12">
           <div class="row">
             <div class="input-field col s12">
               <input id="username" type="text" class="validate" name="username" required>
-              <label for="username">Username</label>
-              <span class="helper-text" data-error="wrong" data-success="right"></span>
+              <label for="username">Email</label>
+              <span class="helper-text" data-error="wrong"></span>
             </div>
           </div>
 
@@ -25,8 +24,7 @@
             <div class="input-field col s12">
               <input id="password" type="password" class="validate" name="password" required>
               <label for="password">Password</label>
-              <span class="helper-text" data-error="Password Must be Longer than 5 and less than 50 characters"
-                data-success="right"></span>
+              <span class="helper-text" data-error="Password Must be Longer than 5 and less than 50 characters"></span>
             </div>
           </div>
 
@@ -35,10 +33,52 @@
           <button class="waves-effect waves-light btn" type="submit">Login</button>
         </form>
       </div>
+      <p class="signup-portal">Belum ada akun? <a (click)="toggleAuthForm()">Daftar </a> dulu!</p>
+    </div>
 
+    <div class="welcome-container" id="signup" *ngIf="isNewUser">
+      <div class="row">
+        <form action="login" class="col s12">
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="email" type="email" class="validate" name="email" required>
+              <label for="email">Email</label>
+              <span class="helper-text" data-error="email wajib" ></span>
+            </div>
+          </div>
 
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="username" type="text" class="validate" name="username" required>
+              <label for="username">Username</label>
+              <span class="helper-text" data-error="User name wajib" ></span>
+            </div>
+          </div>
 
-      <p class="signup-portal">Dont have an account? <span onClick="redirectSignUp()">Sign up</span> Now!</p>
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="password" type="password" class="validate" name="password" required>
+              <label for="password">Password</label>
+              <span class="helper-text" data-error="Password Must be Longer than 5 and less than 50 characters"
+                ></span>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="password" type="password" class="validate" name="password" required>
+              <label for="password">Confirm Password</label>
+              <span class="helper-text" data-error="Password Must be Longer than 5 and less than 50 characters"
+                ></span>
+            </div>
+          </div>
+
+          <!-- onblur="lengthCheckLogin()" onchange="lengthCheckLogin()" onfocus="lengthCheckLogin()" -->
+
+          <button class="waves-effect waves-light btn" type="submit" (click)="onSignup()">Daftar</button>
+        </form>
+      </div>
+      <p class="signup-portal">Belum ada akun? <a (click)="toggleAuthForm()">Daftar </a> dulu!</p>
     </div>
   </div>
 
