--- a/Documents/e-kayseri/src/app/auth-page/auth-page.component.scss
+++ b/Documents/e-kayseri/src/app/auth-page/auth-page.component.scss
@@ -1,10 +1,18 @@
+@import '../../library';
+
 body {
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-    height: 100%;
+    padding: 0;
+  }
+
+  #signup .input-field {
+    margin-top: 0;
+    margin-bottom: 0;
   }
   
   a {
-    color: #00B7FF;
+    color: $pink;
+    cursor: pointer;
   }
   
   .modal-trigger{
@@ -15,40 +23,23 @@ body {
     font-weight: bold;
   }
   
-  
-  .signup-section {
-    display: grid;
-    grid-template-columns: 10fr 10fr;
-    height: 100%;
-  }
-  
   .welcome-h1{
     text-align: center;
     font-style: bold
   }
   
-  
-  
-  .signup-side {
-    padding: 2rem;
-    background-color: #dfe1ee;
-    height: 100%;
-  }
+
   
   .welcome-container{
     padding: 2rem;
-    background-color: #dfe1ee;
-    height: 100%;
     text-align: center;
-    margin: 2rem;
   }
   
   
   .login-section {
     display: grid;
-    grid-template-columns: 10fr 10fr;
-    height: 100%;
-    background-color: blue;
+    grid-template-columns: 10fr   10fr;
+    min-height: 100vh;
   }
   
   
@@ -56,40 +47,35 @@ body {
     padding: 3rem;
     grid-column: 1/2;
     background-color: #dfe1ee;
-      height: 100%;
   }
   
   .side2 {
     grid-column: 2/3;
     background-color: #f4f4fc;
-    height: 100%;
     padding: 3rem;
   }
   
   .budak {
     display: block;
     width: 70%;
-    height: auto;
     margin-left: auto;
     margin-right: auto;
   }
   
   .logo{
-  
     font-size: 18px;
     color: #4f6473;
     font-weight: bold;
   }
   
   .greetings{
-  
     font-size: 24px;
     color: #4f6473;
     font-weight: bold;
     margin-bottom:2rem;
     text-align: left;
-  
   }
+
   .greetings2{
     text-align: center;
     font-size: 28px;
@@ -108,14 +94,4 @@ body {
   
   .btn {
     background-color: #ff7070;
-  }
-  
-  .signup-portal{
-    margin: 2rem;
-    color: #a9a8a8;
-    font-weight: bold;
-  }
-  
-  .signup-portal span {
-    color: #ff7070;
   }
