--- a/Documents/e-kayseri/src/app/homepage/homepage.component.scss
+++ b/Documents/e-kayseri/src/app/homepage/homepage.component.scss
@@ -48,10 +48,12 @@ section {
         
         .content-box {
             background: #F4F4FC;
-            max-height: 550px;
+            max-height: 90vh;
             border-radius: 20px;
             padding: 2rem;
             overflow-y: auto;
+            margin-top: 1rem;
+            margin-right: 1rem;
         }
     }
 }
