--- a/Documents/e-kayseri/src/styles.scss
+++ b/Documents/e-kayseri/src/styles.scss
@@ -1,81 +1,101 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import './library';
+@import "./library";
 
-html, body {
-    background-color: #DFE1EE;
-    padding: 10px;
-    margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
-    height: fit-content;
+html,
+body {
+  background-color: #dfe1ee;
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-.header{
-    font-size: 36px;
-    color: $dark-blue;
-    font-weight: 500;
+.mat-form-field-appearance-legacy .mat-form-field-underline {
+  background-color: grey;
+}
+
+.mat-form-field.mat-focused .mat-form-field-ripple{
+  background-color: $pink;
+}
+
+.header {
+  font-size: 36px;
+  color: $dark-blue;
+  font-weight: 500;
 }
 
 .subheader {
-    font-size: 18px;
-    color: $dark-blue;
+  font-size: 18px;
+  color: $dark-blue;
 }
 
 .card {
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    background: #F4F4FC;
-    box-shadow:  20px 20px 60px #cfcfd6,
-                 -20px -20px 60px #ffffff;
-    border-radius: 20px;
-    color: $dark-blue;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  background: #f4f4fc;
+  box-shadow: 20px 20px 60px #cfcfd6, -20px -20px 60px #ffffff;
+  border-radius: 20px;
+  color: $dark-blue;
 }
 
 .btn {
-    width: 112px;
-    height: 32px;
-    left: 296px;
-    top: 466px;
-    margin: 10px;
-    border: none;
-    color: white;
-    cursor: pointer;
-    transition: all 0.5s;
+  width: 112px;
+  height: 32px;
+  margin: 10px;
+  border: none;
+  color: white;
+  cursor: pointer;
+  transition: all 0.5s;
 
-    border-radius: 10px;
+  border-radius: 10px;
+  background: linear-gradient(145deg, #ff7878, #e66565);
+  box-shadow: 11px 11px 22px #ee8383, -11px -11px 22px #ffffff;
+
+  &:hover {
+    filter: brightness(1.05);
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+  &:active {
     background: linear-gradient(145deg, #ff7878, #e66565);
-    box-shadow:  11px 11px 22px #ee8383,
-             -11px -11px 22px #ffffff;
-    
-    &:hover {
-        filter: brightness(1.05);
-    }
-
-    &:focus {
-        outline: none;
-    }
-
-    &:active {
-        background: linear-gradient(145deg, #ff7878, #e66565);
-        box-shadow:  5px 5px 10px #ee8383,
-             -5px -5px 10px #ffffff;
-        outline: none;
-    }
+    box-shadow: 5px 5px 10px #ee8383, -5px -5px 10px #ffffff;
+    outline: none;
+  }
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
-    padding: 1px;
-  }
+  width: 10px;
+  padding: 1px;
+}
 
 ::-webkit-scrollbar-thumb {
-    background: $dark-blue; 
-    border-radius: 20px;
-  }
+  background: $dark-blue;
+  border-radius: 20px;
+}
 
-  .divider {
-      height: 2px;
-      border-top: 2px solid;
-      color: $light-grey;
-      margin: 1rem 1rem;
-  }
+.divider {
+  height: 2px;
+  border-top: 2px solid;
+  color: $light-grey;
+  margin: 1rem 1rem;
+}
+
+.datepicker-date-display {
+  background-color: $pink !important;
+  color: $light-grey;
+}
+
+.datepicker-cancel,
+.datepicker-clear,
+.datepicker-today,
+.datepicker-done {
+  color: $pink !important;
+  padding: 0 1rem;
+}
+
+.dropdown-content li> a, .dropdown-content li> span {
+    color: $pink !important;
+}
