- [MyDebt] Created MyDebt static UI - [Auth] Fix POST and GET cors issue when creating profile - [Profile] Populated profile page with real data from BE

--- a/Documents/e-kayseri/src/app/auth-page/register-profile-process/register-profile-process.component.html
+++ b/Documents/e-kayseri/src/app/auth-page/register-profile-process/register-profile-process.component.html
@@ -27,7 +27,7 @@
                         <input matInput formControlName="dateOfBirth" (click)="picker.open()" [matDatepicker]="picker">
                         <mat-datepicker #picker></mat-datepicker>
                     </mat-form-field>
-                    <label>Choose a date</label>
+                    <label>Tanggal Lahir</label>
                 </div>
                 <div class="input-field col s6">
                     <mat-form-field appearance="legacy" class="select-input">
