--- a/Documents/e-kayseri/src/app/homepage/homepage.component.html
+++ b/Documents/e-kayseri/src/app/homepage/homepage.component.html
@@ -1,36 +1,33 @@
 <section>
     <div class="sidebar">
         <div class="navigations">
-            <div class="avatar" [routerLink]="['/profile']" [ngStyle]="{'border-color':(selectedTab === 0) ? '#FF7070' : 'transparent'}" (click)='selectedTab = 0'></div>
-            
-            <a 
-            [routerLink]="['/']"
-            [ngStyle]="{'background-color':(selectedTab === 1) ? '#FF7070' : 'transparent'}"
-            (click)='selectedTab = 1'>
-                <mat-icon aria-hidden="false" aria-label="Example home icon">
+            <div class="avatar" [routerLink]="['/profile']"
+                [ngStyle]="{'border-color':(selectedTab === 0) ? '#FF7070' : '#9ba1ca'}" (click)='selectedTab = 0'>
+            </div>
+
+            <a [routerLink]="['/']" (click)='selectedTab = 1'>
+                <mat-icon  matTooltip="Home" matTooltipPosition="right" [ngStyle]="{'color':(selectedTab === 1) ? '#FF7070' : '#9ba1ca'}" aria-hidden="false"
+                    aria-label="Example home icon">
                     home
                 </mat-icon>
             </a>
 
-            <a
-            [ngStyle]="{'background-color':(selectedTab === 2) ? '#FF7070' : 'transparent'}"
-            (click)='selectedTab = 2'>
-                <mat-icon aria-hidden="false" aria-label="Example home icon" >
+            <a (click)='selectedTab = 2'>
+                <mat-icon matTooltip="Settings" matTooltipPosition="right" [ngStyle]="{'color':(selectedTab === 2) ? '#FF7070' : '#9ba1ca'}" aria-hidden="false"
+                    aria-label="Example home icon">
                     settings
-                </mat-icon></a>
+                </mat-icon>
+            </a>
 
-            <a 
-            [routerLink]="['/my-debt']"
-            [ngStyle]="{'background-color':(selectedTab === 3) ? '#FF7070' : 'transparent'}" 
-            (click)='selectedTab = 3'>
-                <mat-icon aria-hidden="false" aria-label="Example home icon">
+            <a [routerLink]="['/my-debt']" (click)='selectedTab = 3'>
+                <mat-icon matTooltip="Uang Kas" matTooltipPosition="right" [ngStyle]="{'color':(selectedTab === 3) ? '#FF7070' : '#9ba1ca'}" aria-hidden="false"
+                    aria-label="Example home icon">
                     monetization_on
                 </mat-icon>
             </a>
-            <a 
-            [ngStyle]="{'background-color':(selectedTab === 4) ? '#FF7070' : 'transparent'}" 
-            (click)='onSignout()'>
-                <mat-icon aria-hidden="false" aria-label="Example home icon">
+            <a (click)='onSignout()'>
+                <mat-icon id="logout-button" matTooltip="Keluar" matTooltipPosition="right" [ngStyle]="{'color':(selectedTab === 4) ? '#FF7070' : '#9ba1ca'}" aria-hidden="false"
+                    aria-label="Example home icon">
                     logout
                 </mat-icon>
             </a>
