--- a/Documents/e-kayseri/src/app/homepage/profile/profile.component.html
+++ b/Documents/e-kayseri/src/app/homepage/profile/profile.component.html
@@ -1,34 +1,45 @@
 <Section>
     <p class="header">My Profile</p>
-    <div class="container">
+    <app-spinner *ngIf="!(userProfile | async)"></app-spinner>
+    <div class="container" *ngIf="(userProfile | async) as user">
         <div class='side'>
             <div class="card my-basic">
                 <div id="avatar"></div>
-                <p class="subheader">Muhammad Firghili</p>
-                <p>email@emaildev.com</p>
-                <p>+555 999 1234</p>
+                <p class="subheader">{{user[0]?.firstName}} {{user[0]?.lastName}}</p>
+                <p>{{user[0]?.email}}</p>
+                <p>{{user[0]?.phoneNum}}</p>
             </div>
             <div class="card my-about">
                 <p class="subheader">About Me</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi, neque! Minima sequi beatae cumque numquam voluptatibus porro voluptas laudantium voluptatum earum nulla obcaecati culpa impedit consequatur eum, quis rem expedita?</p>
+                <p>{{user[0]?.about}}</p>
             </div>
         </div>
        <div class="side">
         <div class="card my-education">
             <p class="subheader">Education</p>
             <p class="label">Institusi:</p>
-            <p>Abdullah Gul</p>
+            <p>{{user[0]?.institution}}</p>
             <p class="label">Bolum:</p>
-            <p>BA</p>
+            <p>{{user[0]?.faculty}}</p>
             <p class="label">Year:</p>
-            <p>3</p>
+            <p>{{user[0]?.educationLevel}}</p>
         </div>
         <div class="card my-background">
             <p class="subheader">Background</p>
-            <p class="label">Kota:</p>
-            <p>Jakarta</p>
+            <div class="info-box">
+                <div>
+                    <p class="label">Kota Asal:</p>
+                    <p>{{user[0]?.indonesianProvince}}</p>
+                </div>
+                <div>
+                    <p class="label">Tanggal Lahir:</p>
+                    <p>{{user[0]?.dateOfBirth * 1000 | date}}</p>
+                </div>
+            </div>
+            
+            
             <p class="label">Tahun Masuk:</p>
-            <p>2018</p>
+            <p>{{user[0]?.dateOfArrival * 1000 | date}}</p>
         </div>
        </div>
     </div>
